Bug with very long content on mobiles has been fixed

--- a/styles/layout/_base.scss
+++ b/styles/layout/_base.scss
@@ -86,9 +86,9 @@ ul {
 }
 
 .section {
-    height: 100vh;
-
+    height: 100vh;    
     @include phones {
+       height: unset;
        min-height: 100vh;
     }
 }
