--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,7 @@ ul {
   height: 100vh; }
   @media screen and (max-width: 480px) {
     .section {
+      height: unset;
       min-height: 100vh; } }
 
 h2 {
